welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:-6: error: Missing closing brace `}' assumed here
try {
^sortaSum:1: error: expected class or object definition
def sortaSum(a:Int, b:Int):Int = {var s:Int=a+b
^